--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,10 +7,10 @@
     <button class="blue" bindtap="calMac">计算要安排多少台机</button>
   </view>
   <view class="btnGroup">
-    <button class="orange">计算能做多少件衣服</button>
+    <button class="orange" bindtap="calClo">计算能做多少件衣服</button>
   </view>
   <view class="btnGroup">
-    <button class="pink">计算要多久才能完成</button>
+    <button class="pink" bindtap="calTime">计算要多久才能完成</button>
   </view>
     <view class="btnGroup">
     <button bindtap="scanNum">扫一扫</button>
