--- a/pages/cal/cal.wxss
+++ b/pages/cal/cal.wxss
@@ -12,11 +12,13 @@
 .layout-top{
     width: 100%;
     margin-bottom: 50rpx;
-    height: 10vh;
+    height: 8%;
+    font-size:150%;
+    text-align: center;
 }
 .layout-middle{
     width: 100%;
-    height: 90vh;
+    height: 88%;
 }
 .screen {
     text-align: right;
@@ -26,12 +28,13 @@
     font-weight: bold;
     box-sizing: border-box;
     border-top: 1px solid #fff;
+    font-size: 150%;
 }
 .btnGroup {
     display: flex;
     flex-direction: row;
     flex: 1;
-    font-size: 200%;
+    font-size: 300%;
     width: 100%;
     height: 16.66%;
     background-color: #fff;
