--- a/pages/result/result.wxml
+++ b/pages/result/result.wxml
@@ -1,18 +1,19 @@
 <!--pages/result/result.wxml-->
-
-<view>
-  <text>每件时间为:</text>
-  <text>{{perTime}}</text>
-</view>
-<view>
-  <text>做货所用的天数为:</text>
-  <text>{{finTime}}</text>
-</view>
-<view>
-  <text>总件数为:</text>
-  <text>{{cloNum}}</text>
-</view>
-<view>
-  <text>开机台数为:</text>
-  <text>{{machNum}}</text>
+<view class="content">
+  <view class="font brown">
+    <view>{{perTimeTitle}}</view>
+    <view>{{perTime}} 分钟/件</view>
+  </view>
+  <view class="font pink">
+    <view>{{finTimeTitle}}</view>
+    <view>{{finTime}} 天</view>
+  </view>
+  <view class="font orange">
+    <view>{{cloNumTitle}}</view>
+    <view>{{cloNum}} 件</view>
+  </view>
+  <view class="font blue">
+    <view>{{machNumTitle}}</view>
+    <view>{{machNum}} 台</view>
+  </view>
 </view>
