--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -13,6 +13,9 @@
     <button class="pink btn" bindtap="calTime">计算要多久才能完成</button>
   </view>
   <!-- <view class="btnGroup">
+    <button class="green btn" bindtap="calTime">计算一天一夜的产值</button>
+  </view> -->
+  <!-- <view class="btnGroup">
     <button bindtap="scanNum">扫一扫</button>
   </view> -->
 </view>
